# job_search

./: .gitignore  READMY.md  company_data.json  main.py  pyproject.toml
src/api/: __init__.py  hh_api.py
src/db/: __init__.py  db_creator.py  db_manager.py
src/utils/: __init__.py  config_loader.py
